# luneth-gui

./: .gitignore  Cargo.toml  README.md  README_USAGE.md  check.sh  deny.toml  package-lock.json  package.json  vite.config.ts
.github/workflows/: build.yml  code-analysis.yml  test.yml
crates/luneth-db/: Cargo.toml
crates/luneth-db/src/: db.rs  examples.rs  lib.rs  types.rs
crates/luneth-db/src/db/: impl_db.rs  impl_history.rs  impl_local.rs  impl_remote.rs  service.rs
crates/luneth-db/src/entities/: history_op.rs  history_task.rs  record_local.rs  record_remote.rs
sample/: test_data.txt
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: client.rs  common.rs  db.rs  extract.rs  handlers.rs  lib.rs  luneth.rs  main.rs  scrap.rs  utils.rs
src-tauri/src/command/: client.rs  config.rs  extract.rs  image.rs  interaction.rs  log.rs  scrap.rs  task.rs
src-tauri/src/db/: log.rs  read.rs  write.rs
src-tauri/src/handlers/: auto.rs  batch.rs  idol.rs  images.rs  record.rs  submit.rs  update.rs
src-tauri/src/scrap/: auto.rs  events.rs  idol.rs  images.rs  record.rs  specified.rs
src/components/: Pagination.vue  ProgressTracker.vue  RecordInfo.vue  RecordLinks.vue  Sidebar.vue
src/store/: app.ts  cache.ts  eventManager.ts  extract.ts  index.ts  pagination.ts  progress.ts  record.ts  task.ts
src/types/: app.ts  cache.ts  events.ts  index.ts  progress.ts  record.ts  task.ts
src/utils/: imageLoader.ts
src/views/: ConfigView.vue  CrawlView.vue  ExtractView.vue  HistoryListView.vue  HomeView.vue  ManageView.vue  ManageView_new.vue  RecordDetailView.vue  RecordListView.vue  TaskView.vue
