[package]
name = "luneth-gui"
version = "0.3.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "luneth_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
luneth-db = { path = "../crates/luneth-db" }

tauri = { workspace = true, features = ["protocol-asset"] }

tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-log = "2"

anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
regex = { workspace = true }
tokio = { workspace = true }
luneth = { workspace = true }
chrono = { workspace = true }

log = { workspace = true }
env_logger = { workspace = true }

url = "2"


[lints]
workspace = true
