[package]
name = "luneth-db"
version = "0.3.0"
edition = "2024"
publish = false

[dependencies]
# workspace dependencies
chrono = { workspace = true }
tauri = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
luneth = { workspace = true }

log = {workspace = true}

sea-orm = { version = "^1.1.4", features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "macros",
    "with-chrono",
    "with-uuid",
    "with-json",
] }


uuid = { version = "1.0", features = ["v4", "serde"] }
# sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls", "chrono", "uuid"] }
# scraper = "0.20"

[lints]
workspace = true
